--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.2.0",
+  "version": "0.2.1",
   "name": "vh-semantic-release-cli",
   "description": "setup automated semver compliant package publishing",
   "author": "Christoph Witzko <npm@christophwitzko.com> (http://christophwitzko.com)",
@@ -7,8 +7,11 @@
     "semantic-release-cli": "./bin/semantic-release.js"
   },
   "scripts": {
+    "build": "rimraf dist && mkdirp dist && babel src --out-dir dist",
+    "prepublish": "npm run build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "test": "npm run test:style"
+    "test": "npm run test:style",
+    "test:style": "standard"
   },
   "dependencies": {
     "async": "2.0.1",
@@ -20,7 +23,7 @@
     "keytar": "3.0.2",
     "lodash": "4.15.0",
     "nopt": "3.0.6",
-    "npm-registry-client": "7.1.2",
+    "npm-registry-client": "7.2.1",
     "npmconf": "2.1.2",
     "npmlog": "4.0.0",
     "parse-github-repo-url": "1.3.0",
@@ -31,10 +34,12 @@
     "validator": "5.6.0"
   },
   "devDependencies": {
+    "babel-cli": "6.14.0",
     "cz-conventional-changelog": "1.2.0",
     "mkdirp": "0.5.1",
     "rimraf": "2.5.4",
-    "semantic-release": "4.3.5"
+    "semantic-release": "4.3.5",
+    "standard": "8.0.0"
   },
   "engines": {
     "node": ">=6",
